feat: add internationalization for BasicInfo component
- Add missing i18n keys to en.json and de.json
  * character.sentence.prefix: 'A tier' / 'Stufe'
  * character.sentence.connector: 'who' / 'mit'
  * character.portrait: 'Portrait' / 'Porträt'

- Update BasicInfo component to use t() function
  * Replace hardcoded 'A tier' with t('character.sentence.prefix')
  * Replace hardcoded 'who' with t('character.sentence.connector')
  * Replace hardcoded 'Portrait' with t('character.portrait')
  * Add import for t() function

- Install eslint-plugin-i18next for i18n linting
  * Attempted automated checking of hardcoded strings
  * Plugin too aggressive with lit-html templates
  * Disabled rule, rely on code review instead
  * Documented in eslint.config.js with explanation

- Create comprehensive I18N.md documentation
  * Usage guide for t() function
  * Translation file structure
  * Adding new translations
  * Testing strategies
  * Best practices and rules
  * Troubleshooting guide
  * Future improvements

German sentence structure:
- English: 'A tier 3 Strong Glaive who Bears a Halo of Fire'
- German: 'Stufe 3 Strong Glaive mit Bears a Halo of Fire'
- Natural phrasing for German (omits 'A', uses 'mit')

All 29/29 E2E tests passing
ESLint passes with 2 warnings (unrelated)

--- a/src/i18n/locales/de.json
+++ b/src/i18n/locales/de.json
@@ -11,7 +11,12 @@
     "tier": "Stufe",
     "type": "Typ",
     "descriptor": "Eigenschaft",
-    "focus": "Fokus"
+    "focus": "Fokus",
+    "sentence": {
+      "prefix": "Stufe",
+      "connector": "mit"
+    },
+    "portrait": "Porträt"
   },
   "stats": {
     "heading": "Attribute",
