--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -11,7 +11,12 @@
     "tier": "Tier",
     "type": "Type",
     "descriptor": "Descriptor",
-    "focus": "Focus"
+    "focus": "Focus",
+    "sentence": {
+      "prefix": "A tier",
+      "connector": "who"
+    },
+    "portrait": "Portrait"
   },
   "stats": {
     "heading": "Stats",
