feat: Reorganize page layout with abilities, equipment, and text fields
Major restructuring:
- Extract Abilities as separate component with two-column grid layout
- Extract Equipment as separate component with light blue theme
- Restructure ItemsSection to 2x2 grid:
  * Top row: Equipment | Cyphers
  * Bottom row: Artifacts | Oddities
- Create BottomTextFields for Background | Notes side-by-side
- Update Character type: abilities changed from string to Ability[]
- Update CharacterSheet layout order:
  1. Header
  2. Basic Info
  3. Stats
  4. Abilities (below stats, two columns)
  5. Items (2x2 grid)
  6. Bottom Text Fields (Background | Notes)
- Reduce container width from max-w-7xl to max-w-6xl
- Update i18n translations for new structure
- Update all tests to match new component structure

Test results: 40/40 scenarios passing (201 steps)

--- a/src/i18n/locales/de.json
+++ b/src/i18n/locales/de.json
@@ -46,6 +46,14 @@
     "heading": "Kuriositäten",
     "empty": "Keine Kuriositäten"
   },
+  "equipment": {
+    "heading": "Ausrüstung",
+    "empty": "Keine Ausrüstung"
+  },
+  "abilities": {
+    "heading": "Fähigkeiten",
+    "empty": "Keine Fähigkeiten"
+  },
   "textFields": {
     "heading": "Charakterdetails",
     "background": {
@@ -55,14 +63,6 @@
     "notes": {
       "label": "Notizen",
       "empty": "Keine Notizen"
-    },
-    "equipment": {
-      "label": "Ausrüstung",
-      "empty": "Keine Ausrüstung"
-    },
-    "abilities": {
-      "label": "Fähigkeiten",
-      "empty": "Keine Fähigkeiten"
     }
   }
 }
