refactor: Rename 'Clear' button to 'New' and create truly empty character
- Renamed EMPTY_CHARACTER to NEW_CHARACTER with completely blank state
- All basic info fields now empty (name, type, descriptor, focus)
- Tier defaults to 1, all stat pools start at 7 with 0 edge
- Updated i18n: 'clear' → 'new' in en.json, 'Löschen' → 'Neu' in de.json
- Renamed button component: onClear → onNew, clear-button → new-button
- Updated CSS: btn-clear → btn-new (kept same brown styling)
- Updated all test files: character-storage, character-dom, i18n features and steps
- All 49 scenarios passing (244 steps)

The 'New' button now creates a completely blank character sheet ready for new character creation.

--- a/src/i18n/locales/de.json
+++ b/src/i18n/locales/de.json
@@ -3,8 +3,8 @@
     "title": "Numenera Charakterbogen"
   },
   "buttons": {
-    "load": "Laden",
-    "clear": "Löschen"
+    "load": "Load",
+    "new": "Neu"
   },
   "character": {
     "name": "Name",
