feat(phase1.7): Section boxing & badge reorganization
Major UI reorganization with new section box architecture and improved badge positioning.

Component Architecture:
- Created CyphersBox component (standalone section with Max Cyphers badge)
- Created ItemsBox component (combines Equipment, Artifacts, Oddities with Shins badge)
- Updated Stats component to use section-box styling with Effort badge
- Deleted obsolete components: Cyphers, Equipment, Artifacts, Oddities, ItemsSection

Badge System Enhancements:
- Added .badge-top-left and .badge-top-right positioning classes
- XP Badge: Top-left of BasicInfo (unchanged)
- Effort Badge: Moved to top-right of Stats section
- Max Cyphers Badge: NEW - Top-right of Cyphers section (shows current/max format)
- Shins Badge: Moved to top-right of Items section

Styling:
- Created section-box.css with shared styling for all major sections
- Updated stat-badge.css with flexible positioning system
- Updated main.css to import section-box.css

Data Model:
- Added maxCyphers field to Character interface
- Updated mock data with maxCyphers values
- Updated localStorage migration to handle new field

i18n:
- Added 'cyphers.max' translation (EN/DE)
- Added 'items.heading' translation (EN/DE)

Testing:
- Added data-testid attributes to all new components
- Updated test expectations for equipment (now items, not text field)
- Fixed EquipmentItem testid pattern
- All 49 BDD scenarios passing (244 steps)

Benefits:
- Better visual organization with themed section boxes
- Clearer information hierarchy with consistent badge positioning
- Max Cyphers limit always visible in context
- Cleaner component architecture with better separation of concerns

--- a/src/i18n/locales/de.json
+++ b/src/i18n/locales/de.json
@@ -10,13 +10,25 @@
     "name": "Name",
     "tier": "Stufe",
     "type": "Typ",
-    "descriptor": "Eigenschaft",
+    "descriptor": "Deskriptor",
     "focus": "Fokus",
     "sentence": {
-      "prefix": "Rang",
-      "connector": "und"
+      "prefix": "Ein Stufe",
+      "connector": "der"
     },
-    "portrait": "Porträt"
+    "portrait": "Portrait",
+    "xp": "EP",
+    "shins": "Shins"
+  },
+  "resourceTracker": {
+    "xp": "EP",
+    "shins": "Shins",
+    "armor": "Rüstung"
+  },
+  "effort": {
+    "title": "Anstrengung",
+    "max": "Maximum",
+    "costPerLevel": "Kosten pro Stufe"
   },
   "stats": {
     "heading": "Attribute",
@@ -25,14 +37,16 @@
     "intellect": "Intellekt",
     "pool": "Pool",
     "edge": "Vorteil",
-    "current": "Aktuell"
+    "current": "Aktuell",
+    "effort": "Anstrengung"
   },
   "cyphers": {
     "heading": "Cypher",
     "name": "Name",
     "level": "Stufe",
     "effect": "Effekt",
-    "empty": "Keine Cypher"
+    "empty": "Keine Cypher",
+    "max": "Max"
   },
   "artifacts": {
     "heading": "Artefakte",
@@ -45,6 +59,9 @@
   "oddities": {
     "heading": "Kuriositäten",
     "empty": "Keine Kuriositäten"
+  },
+  "items": {
+    "heading": "Besitztümer"
   },
   "equipment": {
     "heading": "Ausrüstung",
