feat: Phase 2 - Ability Enhancements with i18n
- Extended Ability type with optional cost, pool, and action properties
- Updated AbilityItem component to display cost badges, pool indicators, and action types
- Added pool-specific badge styling (might=red, speed=blue, intellect=purple)
- Created comprehensive BDD test coverage (6 new scenarios, 30 new steps)
- Added i18n support for cost badges using existing stats translations
- Consolidated translations to avoid duplication (reusing stats.might/speed/intellect)
- Updated mock data with 7 diverse abilities showcasing all properties

Test Results: 55 scenarios (274 steps) - ALL PASSING ✅

Visual Design:
- Cost badges: Amber theme with tooltip
- Pool badges: Color-coded by stat type
- Action indicators: Italic indigo text
- Maintains consistent parchment aesthetic

i18n Coverage:
- abilities.cost (EN: Cost, DE: Kosten)
- Reuses stats.might/speed/intellect for pool names
- Updated i18n tests to match enhanced empty state messages

--- a/src/i18n/locales/de.json
+++ b/src/i18n/locales/de.json
@@ -69,7 +69,8 @@
   },
   "abilities": {
     "heading": "Fähigkeiten",
-    "empty": "Keine Fähigkeiten"
+    "empty": "Keine Fähigkeiten vorhanden. Fügen Sie hier besondere Fähigkeiten, trainierte Fertigkeiten und andere Charaktereigenschaften hinzu.",
+    "cost": "Kosten"
   },
   "textFields": {
     "heading": "Charakterdetails",
