--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -69,7 +69,8 @@
   },
   "abilities": {
     "heading": "Abilities",
-    "empty": "No abilities"
+    "empty": "No abilities yet. Add special abilities, trained skills, and other character capabilities here.",
+    "cost": "Cost"
   },
   "textFields": {
     "heading": "Character Details",
