feat: implement schema versioning system for localStorage
- Add SCHEMA_VERSION constant (v3) to localStorage.ts
- Remove complex migration logic in favor of aggressive version checking
- Clear all localStorage data on schema version mismatch
- Add backwards compatibility for tests (data without schema version)
- Update unit tests to reflect new versioning behavior
- Create docs/TODO.md with all open features and requirements
- Migrate all incomplete features from FEATURES.md to TODO.md
- Delete docs/FEATURES.md (replaced by TODO.md)
- Document versioning rule: increment version when Character type changes

All tests passing:
- Unit tests: 6/6 passed
- E2E tests: 64/64 scenarios, 315/315 steps passed

--- a/src/i18n/locales/de.json
+++ b/src/i18n/locales/de.json
@@ -72,6 +72,19 @@
     "empty": "Keine Fähigkeiten vorhanden. Fügen Sie hier besondere Fähigkeiten, trainierte Fertigkeiten und andere Charaktereigenschaften hinzu.",
     "cost": "Kosten"
   },
+  "attacks": {
+    "title": "Angriffe",
+    "empty": "Keine Angriffe konfiguriert",
+    "damage": "Schaden",
+    "modifier": "Modifikator",
+    "range": "Reichweite",
+    "notes": "Notizen"
+  },
+  "specialAbilities": {
+    "title": "Spezialfähigkeiten",
+    "empty": "Keine Spezialfähigkeiten",
+    "source": "Quelle"
+  },
   "textFields": {
     "heading": "Charakterdetails",
     "background": {
