feat: add Phase 4 - Recovery Rolls & Damage Tracking
Add recovery rolls and damage tracking system to character sheet.

Components:
- RecoveryRolls: Track 4 recovery types with editable modifier (1d6 + X)
- DamageTrack: Track impairment status (healthy/impaired/debilitated)

Features:
- Green healing theme for recovery rolls
- Red warning theme for damage track
- Bilingual support (EN/DE)
- Responsive side-by-side layout

Tests:
- 12 new BDD scenarios (all passing)
- Total: 77/77 scenarios pass, 365/365 steps pass
- Updated localStorage schema to v4
- Tests use localStorage manipulation for state changes

Technical:
- Added RecoveryRolls and DamageTrack types
- Updated Character interface
- Updated mock data (FULL_CHARACTER, NEW_CHARACTER)
- Added comprehensive test coverage

--- a/src/i18n/locales/de.json
+++ b/src/i18n/locales/de.json
@@ -85,6 +85,26 @@
     "empty": "Keine Spezialfähigkeiten",
     "source": "Quelle"
   },
+  "recovery": {
+    "title": "Erholungswürfe",
+    "modifier": "Erholung",
+    "action": "Aktion",
+    "tenMinutes": "Zehn Minuten",
+    "oneHour": "Eine Stunde",
+    "tenHours": "Zehn Stunden",
+    "timeAction": "1 Aktion",
+    "time10min": "10 Min",
+    "time1hour": "1 Stunde",
+    "time10hours": "10 Stunden"
+  },
+  "damage": {
+    "title": "Schadensanzeige",
+    "healthy": "Gesund",
+    "impaired": "Beeinträchtigt",
+    "debilitated": "Handlungsunfähig",
+    "impairedDesc": "Aufgaben +1 Schwierigkeit",
+    "debilitatedDesc": "nur Bewegung"
+  },
   "textFields": {
     "heading": "Charakterdetails",
     "background": {
