feat: Implement editable basic character info with modal editing
- Add EditFieldModal component with validation and keyboard shortcuts
- Add modal editing for name, tier, descriptor, and focus fields
- Implement focus trap for keyboard accessibility
- Add comprehensive BDD test coverage (106 scenarios, 100% pass)
- Add mobile support with touch-friendly UI (44x44px tap targets)
- Add i18n support for modal labels and buttons
- Remove modal title per design requirements, use aria-label instead
- Configure Cucumber with failFast option for faster feedback
- Add Rule #10 to testing.md about running new tests in isolation
- Fix translation checker regex to avoid false positives
- All tests passing: 29/29 unit tests, 106/106 e2e scenarios

--- a/docs/I18N.md
+++ b/docs/I18N.md
@@ -265,7 +265,7 @@ Translation keys:
 - `stats.speed` - "Speed" / "Geschwindigkeit"
 - `stats.intellect` - "Intellect" / "Intellekt"
 - `stats.pool` - "Pool"
-- `stats.edge` - "Edge" / "Vorteil"
+- `stats.edge` - "Edge" / "Edge"
 - `stats.current` - "Current" / "Aktuell"
 
 ### Empty States
