feat: add editable Type dropdown and inline editing for Background/Notes fields
- Add Type dropdown to BasicInfo with Nano/Glaive/Jack options
- Implement inline editing for Background and Notes fields (click to edit, blur to save, Escape to cancel)
- Create BottomTextFields component for managing Background/Notes state
- Fix component initialization to prevent duplicates (added initialization flag)
- Add i18n translations for new fields
- Add E2E test step definitions for additional fields editing
- 6 E2E scenarios passing for basic functionality
- Fix ESLint errors (add global type comments)

--- a/src/i18n/locales/de.json
+++ b/src/i18n/locales/de.json
@@ -9,7 +9,12 @@
   "character": {
     "name": "Name",
     "tier": "Stufe",
-    "type": "Typ",
+    "type": {
+      "label": "Typ",
+      "nano": "Nano",
+      "glaive": "Glaive",
+      "jack": "Jack"
+    },
     "descriptor": "Deskriptor",
     "focus": "Fokus",
     "sentence": {
@@ -119,11 +124,13 @@
     "heading": "Charakterdetails",
     "background": {
       "label": "Hintergrund",
-      "empty": "Kein Hintergrund"
+      "empty": "Kein Hintergrund",
+      "placeholder": "Zum Bearbeiten klicken..."
     },
     "notes": {
       "label": "Notizen",
-      "empty": "Keine Notizen"
+      "empty": "Keine Notizen",
+      "placeholder": "Zum Bearbeiten klicken..."
     }
   }
 }
