change german connector translation

--- a/src/i18n/locales/de.json
+++ b/src/i18n/locales/de.json
@@ -19,7 +19,7 @@
     "focus": "Fokus",
     "sentence": {
       "prefix": "Ein Stufe",
-      "connector": "der"
+      "connector": "und"
     },
     "portrait": "Portrait",
     "xp": "EP",
