feat(character): add XP field modal editing
Implement modal-based editing for XP field with validation, keyboard shortcuts, and persistence.

Changes:
- Extended EditFieldModal to support 'xp' field type
- Added XP validation (0-9999, integer only)
- Made XP badge clickable to open edit modal
- Updated handleFieldUpdate in main.ts to handle XP updates
- Added i18n keys for XP modal labels and validation
- Created 11 E2E test scenarios for XP editing
- Fixed test step to handle non-numeric input in number fields
- All 143 E2E scenarios passing

--- a/src/i18n/locales/de.json
+++ b/src/i18n/locales/de.json
@@ -112,12 +112,18 @@
   },
   "modal": {
     "edit": {
-      "name": "Charaktername bearbeiten",
+      "name": "Name bearbeiten",
       "tier": "Stufe bearbeiten",
       "descriptor": "Deskriptor bearbeiten",
       "focus": "Fokus bearbeiten",
+      "xp": "EP bearbeiten",
       "confirm": "Bestätigen",
       "cancel": "Abbrechen"
+    }
+  },
+  "validation": {
+    "xp": {
+      "invalid": "EP muss eine Zahl zwischen 0 und 9999 sein"
     }
   },
   "textFields": {
