feat(character): add Shins field modal editing
Implement modal-based editing for Shins field with validation, keyboard shortcuts, and persistence.

Changes:
- Extended EditFieldModal to support 'shins' field type
- Added Shins validation (0-999999, integer only)
- Converted ItemsBox to stateful component
- Made Shins badge clickable to open edit modal
- Updated handleFieldUpdate in main.ts to handle Shins updates
- Added i18n keys for Shins modal labels and validation
- Created 6 E2E test scenarios for Shins editing
- All 149 E2E scenarios passing (1 pre-existing i18n test failure unrelated to this change)

--- a/src/i18n/locales/de.json
+++ b/src/i18n/locales/de.json
@@ -112,11 +112,12 @@
   },
   "modal": {
     "edit": {
-      "name": "Name bearbeiten",
+      "name": "Namen bearbeiten",
       "tier": "Stufe bearbeiten",
       "descriptor": "Deskriptor bearbeiten",
       "focus": "Fokus bearbeiten",
       "xp": "EP bearbeiten",
+      "shins": "Shins bearbeiten",
       "confirm": "Bestätigen",
       "cancel": "Abbrechen"
     }
@@ -124,6 +125,9 @@
   "validation": {
     "xp": {
       "invalid": "EP muss eine Zahl zwischen 0 und 9999 sein"
+    },
+    "shins": {
+      "invalid": "Shins muss eine Zahl zwischen 0 und 999999 sein"
     }
   },
   "textFields": {
