--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -112,11 +112,12 @@
   },
   "modal": {
     "edit": {
-      "name": "Edit Character Name",
+      "name": "Edit Name",
       "tier": "Edit Tier",
       "descriptor": "Edit Descriptor",
       "focus": "Edit Focus",
       "xp": "Edit XP",
+      "shins": "Edit Shins",
       "confirm": "Confirm",
       "cancel": "Cancel"
     }
@@ -124,6 +125,9 @@
   "validation": {
     "xp": {
       "invalid": "XP must be a number between 0 and 9999"
+    },
+    "shins": {
+      "invalid": "Shins must be a number between 0 and 999999"
     }
   },
   "textFields": {
