feat: implement Shins field editing
- Extended EditFieldModal to support 'shins' field type with 0-999999 validation

- Converted ItemsBox to stateful component accepting character and onFieldUpdate callback

- Made Shins badge clickable, opens EditFieldModal on click

- Added shins case to handleFieldUpdate in main.ts for localStorage persistence

- Added i18n keys for Shins modal and validation messages

- Fixed accidental i18n changes that broke pre-existing name editing test

- All 6 Shins scenarios in resource-tracker-editing.feature now passing

- All 149 E2E scenarios passing

--- a/src/i18n/locales/de.json
+++ b/src/i18n/locales/de.json
@@ -112,7 +112,7 @@
   },
   "modal": {
     "edit": {
-      "name": "Namen bearbeiten",
+      "name": "Name bearbeiten",
       "tier": "Stufe bearbeiten",
       "descriptor": "Deskriptor bearbeiten",
       "focus": "Fokus bearbeiten",
