--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -112,7 +112,7 @@
   },
   "modal": {
     "edit": {
-      "name": "Edit Name",
+      "name": "Edit Character Name",
       "tier": "Edit Tier",
       "descriptor": "Edit Descriptor",
       "focus": "Edit Focus",
