feat: implement Armor field editing
- Extended EditFieldModal to support 'armor' field type with 0-10 validation

- Converted Attacks component to stateful component accepting character and onFieldUpdate callback

- Made Armor badge clickable in Attacks component, opens EditFieldModal on click

- Updated CharacterSheet to use stateful Attacks instance

- Added armor case to handleFieldUpdate in main.ts for localStorage persistence

- Added i18n keys for Armor modal and validation messages (en.json and de.json)

- All 5 Armor scenarios in resource-tracker-editing.feature now passing

- All 154 E2E scenarios passing

--- a/src/i18n/locales/de.json
+++ b/src/i18n/locales/de.json
@@ -118,6 +118,7 @@
       "focus": "Fokus bearbeiten",
       "xp": "EP bearbeiten",
       "shins": "Shins bearbeiten",
+      "armor": "Rüstung bearbeiten",
       "confirm": "Bestätigen",
       "cancel": "Abbrechen"
     }
@@ -128,6 +129,9 @@
     },
     "shins": {
       "invalid": "Shins muss eine Zahl zwischen 0 und 999999 sein"
+    },
+    "armor": {
+      "invalid": "Rüstung muss eine Zahl zwischen 0 und 10 sein"
     }
   },
   "textFields": {
