feat: implement Max Cyphers field editing
- Extended EditFieldModal to support 'maxCyphers' field type with 0-10 validation
- Converted CyphersBox to stateful component with modal editing
- Updated CharacterSheet to use stateful CyphersBox instance
- Added maxCyphers case to handleFieldUpdate in main.ts
- Added validation i18n keys (en/de) - NO modal title keys per recent cleanup
- All 4 Max Cyphers test scenarios now passing (lines 176-197)

Follows same pattern as XP, Shins, and Armor fields.
Part of resource tracker editing feature completion.

--- a/src/i18n/locales/de.json
+++ b/src/i18n/locales/de.json
@@ -125,6 +125,9 @@
     },
     "armor": {
       "invalid": "Rüstung muss eine Zahl zwischen 0 und 10 sein"
+    },
+    "maxCyphers": {
+      "invalid": "Max. Cypher muss eine Zahl zwischen 0 und 10 sein"
     }
   },
   "textFields": {
