feat: implement Effort field editing
- Extended EditFieldModal to support 'effort' field type with 1-6 validation
- Converted Stats to stateful component with modal editing for effort badge
- Updated CharacterSheet to use stateful Stats instance
- Added effort case to handleFieldUpdate in main.ts
- Added validation i18n keys (en/de) - NO modal title keys
- Fixed effort-value testid selector in step definitions
- All 4 Effort test scenarios now passing (lines 202-227)

Effort range: 1-6 (Numenera rules)
Follows same pattern as XP, Shins, Armor, and Max Cyphers fields.
Part of resource tracker editing feature completion.

--- a/src/i18n/locales/de.json
+++ b/src/i18n/locales/de.json
@@ -128,6 +128,9 @@
     },
     "maxCyphers": {
       "invalid": "Max. Cypher muss eine Zahl zwischen 0 und 10 sein"
+    },
+    "effort": {
+      "invalid": "Anstrengung muss eine Zahl zwischen 1 und 6 sein"
     }
   },
   "textFields": {
