--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -128,6 +128,9 @@
     },
     "maxCyphers": {
       "invalid": "Max Cyphers must be a number between 0 and 10"
+    },
+    "effort": {
+      "invalid": "Effort must be a number between 1 and 6"
     }
   },
   "textFields": {
