feat: implement stat pool value editing
- Extended EditFieldModal with 9 new field types (mightPool, mightEdge, mightCurrent, speedPool, speedEdge, speedCurrent, intellectPool, intellectEdge, intellectCurrent)
- Converted StatPool component to stateful architecture with modal editing
- Updated Stats component to pass callbacks to StatPool instances
- Added 9 handleFieldUpdate cases in main.ts for nested stat property updates
- Added validation for 0-9999 range on all stat pool values
- Added i18n validation keys for English and German
- Created complete test suite with 63 scenarios in stat-pool-editing.feature
- Implemented step definitions in stat-pool-editing.steps.ts
- Added step variations to basic-info-editing.steps.ts for compatibility

All stat pool values (Pool, Edge, Current) for Might, Speed, and Intellect are now fully editable with modal-based editing, validation, persistence, and comprehensive test coverage.

--- a/src/i18n/locales/de.json
+++ b/src/i18n/locales/de.json
@@ -131,6 +131,33 @@
     },
     "effort": {
       "invalid": "Anstrengung muss eine Zahl zwischen 1 und 6 sein"
+    },
+    "mightPool": {
+      "invalid": "Kraft-Pool muss eine Zahl zwischen 0 und 9999 sein"
+    },
+    "mightEdge": {
+      "invalid": "Kraft-Edge muss eine Zahl zwischen 0 und 9999 sein"
+    },
+    "mightCurrent": {
+      "invalid": "Aktuelle Kraft muss eine Zahl zwischen 0 und 9999 sein"
+    },
+    "speedPool": {
+      "invalid": "Geschwindigkeit-Pool muss eine Zahl zwischen 0 und 9999 sein"
+    },
+    "speedEdge": {
+      "invalid": "Geschwindigkeit-Edge muss eine Zahl zwischen 0 und 9999 sein"
+    },
+    "speedCurrent": {
+      "invalid": "Aktuelle Geschwindigkeit muss eine Zahl zwischen 0 und 9999 sein"
+    },
+    "intellectPool": {
+      "invalid": "Intellekt-Pool muss eine Zahl zwischen 0 und 9999 sein"
+    },
+    "intellectEdge": {
+      "invalid": "Intellekt-Edge muss eine Zahl zwischen 0 und 9999 sein"
+    },
+    "intellectCurrent": {
+      "invalid": "Aktueller Intellekt muss eine Zahl zwischen 0 und 9999 sein"
     }
   },
   "textFields": {
