Unify card edit buttons and modal styling across all card types
- Replace emoji edit buttons with SVG icons on CypherItem, ArtifactItem, EquipmentItem, OddityItem
- Standardize edit button positioning to absolute top-2 right-2 across all cards
- Add gradient card styling to edit modals for consistent appearance
- Remove technical data-field labels from CypherItem
- Add pr-8 padding to card content to prevent button overlap
- Update cypherItem tests to use data-testid instead of data-field
- Add missing global type declarations for CustomEvent and HTMLDivElement
- Add missing translation keys for equipment and oddities labels
- All 74 unit tests and 226 E2E scenarios passing

--- a/src/i18n/locales/de.json
+++ b/src/i18n/locales/de.json
@@ -63,14 +63,17 @@
   },
   "oddities": {
     "heading": "Kuriositäten",
-    "empty": "Keine Kuriositäten"
+    "empty": "Keine Kuriositäten",
+    "oddity": "Kuriosität"
   },
   "items": {
     "heading": "Besitztümer"
   },
   "equipment": {
     "heading": "Ausrüstung",
-    "empty": "Keine Ausrüstung"
+    "empty": "Keine Ausrüstung",
+    "name": "Name",
+    "description": "Beschreibung"
   },
   "abilities": {
     "heading": "Fähigkeiten",
@@ -115,6 +118,11 @@
       "confirm": "Bestätigen",
       "cancel": "Abbrechen"
     }
+  },
+  "cards": {
+    "edit": "Bearbeiten",
+    "confirm": "Bestätigen",
+    "cancel": "Abbrechen"
   },
   "validation": {
     "xp": {
