feat: Add localStorage persistence for card deletions
- Add saveCharacterState calls to CyphersBox delete handler
- Add saveCharacterState calls to ItemsBox delete handlers (equipment, artifacts, oddities)
- Refactor Abilities, SpecialAbilities, and Attacks to accept onDelete callbacks
- Update CharacterSheet to provide onDelete callbacks with localStorage saves
- Add reload + persistence verification to all 7 card deletion E2E scenarios
- Fix linting issues in Abilities.ts and cyphersBox.test.ts
- All 244 E2E scenarios passing (1478 steps)
- All 100 unit tests passing

Card deletions now persist across page reloads for all 7 card types:
cyphers, equipment, artifacts, oddities, attacks, abilities, special abilities

--- a/src/i18n/locales/de.json
+++ b/src/i18n/locales/de.json
@@ -121,6 +121,7 @@
   },
   "cards": {
     "edit": "Bearbeiten",
+    "delete": "Löschen",
     "confirm": "Bestätigen",
     "cancel": "Abbrechen"
   },
