feat: Add character export functionality with TDD/BDD approach
- Implement exportCharacterToFile() with dual-browser support
  - File System Access API for Chromium browsers
  - Blob download fallback for Safari/Firefox
- Add filename sanitization (spaces to hyphens, special chars removal)
- Export to custom .numenera file format with metadata
- Add purple Export button to header UI (#5a3d7a theme)
- Add i18n translations (Export/Exportieren)
- Complete unit test coverage (8 export tests, 164 total passing)
- Add E2E feature tests with step definitions
- Update DOM tests for 4-button header layout
- Follow strict TDD workflow: tests first, then implementation

--- a/src/i18n/locales/de.json
+++ b/src/i18n/locales/de.json
@@ -5,6 +5,7 @@
   "buttons": {
     "load": "Laden",
     "import": "Importieren",
+    "export": "Exportieren",
     "new": "Neu"
   },
   "character": {
