--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -128,6 +128,9 @@
     "cancel": "Cancel"
   },
   "validation": {
+    "recoveryModifier": {
+      "invalid": "Recovery modifier must be a number between -10 and 20"
+    },
     "xp": {
       "invalid": "XP must be a number between 0 and 9999"
     },
