feat: add character portrait upload/edit functionality
- Added optional portrait field to Character type (stores base64 image data)
- Implemented file upload with validation (image type, 2MB max size)
- Added upload button for empty portraits
- Added hover overlay with Change/Remove buttons for existing portraits
- Portrait displays with object-fit: cover in 150x200px frame
- Added translation keys for upload/change/remove buttons (EN/DE)
- Updated CSS with portrait image, overlay, and button styling

Issue #4: Character Portrait Not Editable

--- a/src/i18n/locales/de.json
+++ b/src/i18n/locales/de.json
@@ -24,6 +24,9 @@
       "connector": "und"
     },
     "portrait": "Portrait",
+    "portraitUpload": "Portrait hochladen",
+    "portraitRemove": "Portrait entfernen",
+    "portraitChange": "Portrait ändern",
     "xp": "EP",
     "shins": "Shins"
   },
