fix: translate ability pool dropdown 'None' option
- Added abilities.pool.none translation key to en.json ('None')
- Added abilities.pool.none translation key to de.json ('Keine')
- Replaced hardcoded 'None' with t('abilities.pool.none') in AbilityItem.ts
- Added Issue #10 to UX_IMPROVEMENTS_TODO.md (portrait display modal)

Issue #5: Ability Pool Dropdown Shows 'None' in German

--- a/src/i18n/locales/de.json
+++ b/src/i18n/locales/de.json
@@ -83,7 +83,10 @@
   "abilities": {
     "heading": "Fähigkeiten",
     "empty": "Keine Fähigkeiten vorhanden. Fügen Sie hier besondere Fähigkeiten, trainierte Fertigkeiten und andere Charaktereigenschaften hinzu.",
-    "cost": "Kosten"
+    "cost": "Kosten",
+    "pool": {
+      "none": "Keine"
+    }
   },
   "attacks": {
     "title": "Angriffe",
