fix: translate hardcoded Action and Description labels in ability edit modes (Issue #7)
- Added translation keys to en.json and de.json:
  - abilities.action: Action/Aktion
  - abilities.description: Description/Beschreibung
- Replaced hardcoded labels in AbilityItem.ts (lines 93, 104)
- Replaced hardcoded label in SpecialAbilityItem.ts (line 56)
- All 164 unit tests passed
- All 310 E2E scenarios passed

--- a/src/i18n/locales/de.json
+++ b/src/i18n/locales/de.json
@@ -84,6 +84,8 @@
     "heading": "Fähigkeiten",
     "empty": "Keine Fähigkeiten vorhanden. Fügen Sie hier besondere Fähigkeiten, trainierte Fertigkeiten und andere Charaktereigenschaften hinzu.",
     "cost": "Kosten",
+    "action": "Aktion",
+    "description": "Beschreibung",
     "pool": {
       "none": "Keine"
     }
